security: bundled-only native loader; fix Sonar vuln + bug
- NativeLibrary: drop the -Dzstd.lib.path override. Loading a
  caller-supplied native library is arbitrary native code execution in
  the JVM; trust only the artifact bundled on the classpath. (Self-built
  libzstd: rebuild it into the native resource jar — docs/how-to.md.)
- NativeLibrary: extract into a private owner-only temp directory
  (createTempDirectory, 0700 on POSIX) instead of a file loose in the
  shared temp root, closing the swap/symlink window (Sonar S5443).
- ZstdSkippableContent: the record carries a byte[]; add content-aware
  equals/hashCode/toString so value equality works as expected instead
  of array identity (Sonar S6218), with a value-semantics test.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>